--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,9 +72,10 @@
                         tools:ignore="VectorDrawableCompat" />
 
                     <TextView
+                        android:id="@+id/digit"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0.00"
+                        android:text="5.00"
                         android:textColor="@color/white"
                         android:textSize="25dp"
                         android:textStyle="bold" />
