--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,8 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp" >
 
                     <ImageView
                         android:layout_width="30dp"
@@ -75,7 +76,7 @@
                         android:id="@+id/digit"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="5.00"
+                        android:text="0.00"
                         android:textColor="@color/white"
                         android:textSize="25dp"
                         android:textStyle="bold" />
