--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -113,6 +113,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/round_button"
         android:text="LOGIN"
+        android:fontFamily="@font/drystick_bold"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
