design order,clean code

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -175,14 +175,14 @@
                             <ImageView
                                 android:layout_width="30dp"
                                 android:layout_height="30dp"
-                                app:srcCompat="@drawable/ic_baseline_history_24"
+                                app:srcCompat="@drawable/walleticon"
                                 tools:ignore="VectorDrawableCompat" />
 
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="history"
+                                android:text="wallet"
                                 android:layout_marginLeft="33dp"
                                 android:layout_marginTop="6dp"
                                 android:textSize="15dp"
