--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -113,7 +113,7 @@
         app:layout_constraintTop_toBottomOf="@+id/emailsignin"
         android:drawableLeft="@drawable/ic_lock" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_signin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
