--- a/app/src/main/res/layout/activity_deposit2.xml
+++ b/app/src/main/res/layout/activity_deposit2.xml
@@ -17,8 +17,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <androidx.appcompat.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/toolbarmap"
+            <androidx.appcompat.widget.Toolbar
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
